03-cluster-tools/10.longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.akna.one.pl
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-api
  hostnames:
    - longhorn.akna.one.pl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
